build: 그레들을 이용한 도메인 별로 멀티모듈 구성

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,10 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+
 rootProject.name = 'multi'
+
+include 'admin'
+include 'comon'
+include 'user'
+
