build: 멀티 모듈 버전 업데이트

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,6 @@
-pluginManagement {
-    repositories {
-        maven { url 'https://repo.spring.io/release' }
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
 
-rootProject.name = 'multi'
 
-include 'admin'
-include 'common'
+rootProject.name = 'demo'
+
 include 'user'
-
+include 'contents'
