--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,31 @@
 buildscript {
+
     ext {
-        springBootVersion = '2.6.2'
+        springBootVersion = '3.0.5'
+        dependencyManagementVersion = "1.1.0"
     }
+
     repositories {
         maven { url 'https://repo.spring.io/release' }
         mavenCentral()
+        gradlePluginPortal()
     }
+
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath "io.spring.gradle:dependency-management-plugin:$dependencyManagementVersion"
     }
 }
+
 
 subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
-    sourceCompatibility = '11'
+    group = 'com.example'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = '17'
 
     repositories {
         mavenCentral()
@@ -29,29 +37,18 @@ subprojects {
         }
     }
 
-    // 공통 의존성
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
+
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         compileOnly 'org.projectlombok:lombok'
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
+        runtimeOnly 'com.h2database:h2'
+        runtimeOnly 'com.mysql:mysql-connector-j'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
 }
-
-project(":common") {
-}
-
-project(":admin") {
-    dependencies {
-        implementation project(":common")
-    }
-}
-
-project(":user") {
-    dependencies {
-        implementation project(':common')
-    }
-}
-
